Reduces memory allocations after 75% max ram used

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,8 @@ project(mem_presser C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(mem_presser main.c
-        collector/mem_tracker.c)
+add_executable(mem_presser main.c)
+
+
+
+add_executable(tacker collector/mem_tracker.c)
